--- a/osr-mapping.tex
+++ b/osr-mapping.tex
@@ -167,15 +167,16 @@ $\chi\gets \chi\cdot\textbf{out}~x_1~x_2~\cdots~x_{k'}:\forall i\in[1,k']:\pi',l
 \end{figure}
 \fi
 
-
+\vspace{-1em}
 \paragraph*{\texttt{OSR\_trans}.} The algorithm relies on two subroutines: \apply\ and \buildcomp. Procedure \apply\ takes as input a program $\pi$ and a program rewriting function $T$, and returns a transformed program $\pi'$ and two functions $\Delta:[1,|\pi|]\rightarrow [1,|\pi'|]$, $\Delta':[1,|\pi'|]\rightarrow [1,|\pi|]$ that map OSR program points between $\pi$ and $\pi'$. 
 Algorithm \buildcomp\ (shown \ifauthorea{above}{in \myalgorithm\ref{alg:osr-build-comp}}) takes as input $\pi$, $l$, $\pi'$, $l'$ and aims to build a {\em store compensation code} $\chi$ that allows firing an OSR from $\pi$ at $l$ to $\pi'$ at $l'$. \osrtrans\ first calls \apply\ and then uses \buildcomp\ on $\pi$, $\pi'$, $\Delta$, $\Delta'$ to build OSR mappings $\mu_{\pi\pi'},\mu_{\pi'\pi}$. Lines 2--5 build the forward mapping $\mu_{\pi\pi'}$ from $l$ in $\pi$ to $\Delta(l)$ in $\pi'$, while lines 6--9 build the backward mapping $\mu_{\pi'\pi}$ from $l'$ in $\pi'$ to $\Delta'(l')$ in $\pi$. If any of the live variables at the OSR destination cannot be guaranteed to be correctly assigned, no entry is created in $\mu_{\pi\pi'}$ or $\mu_{\pi'\pi}$ for the OSR origin point (lines 4 and 8). Hence, those points will not be eligible for OSR transitions. In \mysection\ref{se:eval-OSR-alC} we analyze experimentally the fraction of points for which a compensation code can be created by algorithm \buildcomp\ in a variety of prominent benchmarks.
 
-\paragraph*{\texttt{build\_comp}.} \ifauthorea{The algorithm (shown above)}{Code shown in \myalgorithm\ref{alg:osr-build-comp}} generates a program $\chi$ that starts with an {\tt in} statement with the live variables at the origin $l$ in $\pi$ (line 1), and ends with an {\tt out} statement with the live variables at the destination $l'$ in $\pi'$ (line 9). The goal of $\chi$ is to make sure that all {\tt out} variables are correctly assigned, either because they already hold the correct value upon entry, or because they can be computed in terms of the input variables. The algorithm iterates on all variables $x_i$ that are live at the destination, but not at the origin (line 4). For each of them, it calls a subroutine \reconstruct\ that builds a code fragment that assigns $x_i$ with its correct value using live variables at the origin (line 5). If this value cannot be determined, \reconstruct\ throws an exception and \buildcomp\ returns an undefined compensation code (line 8), which implies that OSR cannot be performed at $l$. To avoid code duplication in $\chi$ and unnecessary work, the algorithm assumes that all points in $\pi'$ are initially unvisited (line 2) and lets \reconstruct\ mark them visited along the way. Algorithm \buildcomp\ can be implemented with a running time linearly bounded by the size of $\pi'$.
+\paragraph*{\texttt{build\_comp}.} \ifauthorea{The algorithm (shown above)}{Code shown in \myalgorithm\ref{alg:osr-build-comp}} generates a program $\chi$ that starts with an {\tt in} statement with the live variables at the origin $l$ in $\pi$ (line 1), and ends with an {\tt out} statement with the live variables at the destination $l'$ in $\pi'$ (line 9). The goal of $\chi$ is to make sure that all {\tt out} variables are correctly assigned, either because they already hold the correct value upon entry, or because they can be computed in terms of the input variables. The algorithm iterates on all variables $x_i$ that are live at the destination, but not at the origin (line 4). For each of them, it calls a subroutine \reconstruct\ that builds a code fragment that assigns $x_i$ with its correct value using live variables at the origin (line 5). If this value cannot be determined, \reconstruct\ throws an exception and \buildcomp\ returns an undefined compensation code (line 8), which implies that OSR cannot be performed at $l$. To avoid code duplication in $\chi$ and unnecessary work, the algorithm assumes that all points in $\pi'$ are initially unvisited (line 2) and lets \reconstruct\ mark them as visited along the way. Algorithm \buildcomp\ can be implemented with a running time linearly bounded by the size of $\pi'$.
+%Algorithm \buildcomp\ can be implemented with a running time linearly bounded by the size of $\pi'$.
 
 %% reconstruct
 \ifdefined\noauthorea
-\begin{figure}[!b]
+\begin{figure}[!ht]
 \IncMargin{2em}
 \begin{algorithm}[H]
 \DontPrintSemicolon
