--- a/osr-composition.tex
+++ b/osr-composition.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis.tex
+
 \subsubsection{Composing Multiple Transformation Passes}
 \label{ss:trans-compose}
 
@@ -49,7 +51,7 @@ Let $\mu_{\pi\pi''}=\mu_{\pi\pi'}\circ\mu_{\pi'\pi''}$. By \mydefinition\ref{de:
 \mysem{\chi'}(\sigma_j\vert_{\live(\pi',l_j)})=\sigma_k\vert_{\live(\pi'',l_k)}
 \end{gather*}
 \end{small}
-Hence, $\mu_{\pi\pi'}\circ\mu_{\pi'\pi''}$ is an OSR mapping from $\pi$ to $\pi''$.
+\noindent Hence, $\mu_{\pi\pi'}\circ\mu_{\pi'\pi''}$ is an OSR mapping from $\pi$ to $\pi''$.
 \end{myproof}
 
 \begin{corollary}
