--- a/osr-evaluation.tex
+++ b/osr-evaluation.tex
@@ -187,6 +187,9 @@ Not surprisingly, constructing a continuation function takes longer than the oth
 
 On our benchmarks, the overall cost of IR manipulation is in the order of hundreds of microseconds, and is thus very likely to be dominated by the cost of just-in-time compilation.
 
+\subsection{Summary}
+\missing\
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\section{On-Stack Replacement \`{a} la Carte}
