All experiments now have a discussion subsection

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1975,7 +1975,7 @@
   author = {Tan, Tian and Li, Yue and Zhang, Yifei and Xue, Jingling},
   title = {{Program Tailoring: Slicing by Sequential Criteria}},
   booktitle = {Proceedings of the 30th European Conference on Object-Oriented Programming},  
-  series = {ECOOOP '16},
+  series = {ECOOP '16},
   year = {2016},
   note = {To appear}
 }
@@ -1984,7 +1984,7 @@
   author = {Maxime Chevalier{-}Boisvert and Marc Feeley},
   title = {{Interprocedural Type Specialization of JavaScript Programs Without Type Analysis}},
   booktitle = {Proceedings of the 30th European Conference on Object-Oriented Programming},  
-  series = {ECOOOP '16},
+  series = {ECOOP '16},
   year = {2016},
   note = {To appear}
 }
