--- a/osr-evaluation.tex
+++ b/osr-evaluation.tex
@@ -469,8 +469,8 @@ Mean & {\bf 2.30} & 4.58 & {\bf 2.87} & 7.33 & {\bf 2.00} & 6.67 \\
 Note that the $0$ values reported for \mytt{fhourstones} in the $live_{(e)}$ scenario do not imply that state compensation is not required. In fact, the algorithm detected that each variable $v$ to assign at the OSR landing pad for which no live counterpart was available at the source location, could be initialized with the value of either a (non-live) function argument or some live variable when $v$ is a constant $\phi$-node. In LLVM IR assignments of the form \mytt{x:=y} are not allowed, since all uses of \mytt{x} can simply be replaced with uses of \mytt{y}: for this reason, a \mytt{RAUW(x,y)} operation is performed on the body of the continuation function $f'$, where \mytt{y} is a live value transferred as argument for $f'$, and no instruction is added to the OSR entry block of $f'$.
 
 \subsection{Discussion}
-We have seen that common compiler transformations can significantly affect the live state of a program across its locations. The four versions of algorithm \reconstruct\ that we have implemented are able to generate compensation code automatically by recursively reassembling portions of the state for the target function.
+We have seen that common compiler transformations can significantly affect the live state of a program across its locations. The four versions of algorithm \reconstruct\ that we have implemented can generate compensation code automatically by recursively reassembling portions of the state for the target function.
 
-OSR is supported almost anywhere by the $avail$ version of the algorithm. Figures reported in \mytable\ref{tab:OSR-alC-prologue-BtoO,tab:OSR-alC-prologue-OtoB} suggest that the size of the set of virtual registers to preserve for an OSR from all supported locations is small: a compiler may thus spill available values that are not already located on the stack. When \reconstruct\ can resort only to live variables, it enables OSR at more than a half of the program locations. We observed that the reconstruction would often fail on an available value coming from a \load\ instruction: we thus believe that the algorithm may significantly benefit from a simple alias analysis to identify safely repeatable \load\ instructions.
+OSR is enabled almost everywhere by the $avail$ version of the algorithm. Figures reported in \mytable\ref{tab:OSR-alC-prologue-BtoO,tab:OSR-alC-prologue-OtoB} suggest that the size of the set of virtual registers to preserve for an OSR from all supported locations is small: a compiler may thus spill available values that are not already located on the stack. When \reconstruct\ can resort only to live variables, it enables OSR at more than a half of the program locations. We observed that the reconstruction would often fail on an available value coming from a memory \load: we thus believe that the algorithm may significantly benefit from a simple alias analysis to identify safely repeatable \load\ instructions.
 
 %For our benchmarks, we enable OSR from both unoptimized to optimized code and viceversa at more than a half of the program locations using only live variables at the source location, and almost anywhere when \reconstruct\ can access previously computed results that are still available.
